# CudaNeatNetwork

./: .gitignore  CMakeLists.txt  CMakeSettings.json  NN.cu  NN.h  NN_constructor.cu  NN_constructor.h  NN_enums.h  Optimizers.h  Readme.md  Todo.md  add_client_headers.py  kernel.cu
Connections/: DenseConnections.cu  DenseConnections.h  IConnections.cu  IConnections.h  NeatConnections.cu  NeatConnections.h  connection_gradients.cu  connection_gradients.cuh  connections_functionality.cu  connections_functionality.cuh  linear_functions.cu  linear_functions.cuh
Costs/: GAE.cu  GAE.cuh  PPO.cu  PPO.cuh  _PPO.cu  costs.cu  costs.cuh  regularization.cu  regularization.cuh
Functionality/: cuda_functionality.cu  cuda_functionality.cuh  functionality.cpp  functionality.h  matrix.cuh  socket_utils.cpp  socket_utils.h
Layers/: ILayer.cu  ILayer.h  LSTMLayer.cu  LSTMLayer.h  NeuronLayer.cu  NeuronLayer.h  derivatives.cu  derivatives.cuh  gradients.cu  gradients.cuh  layer_operation.cu  layer_operations.cu  layer_operations.cuh  neuron_operations.cu  neuron_operations.cuh
Layers/Optimizers/: Adam.cu  Adam.h  IOptimizer.cu  IOptimizer.h  Optimizer_init.cu  Optimizer_init.h  Optimizers.cu  Optimizers.h
Separate_headers/: NN_enums.h  data_type.h  evolution.h  gradient_parameters.h  initialization.h  kernel_macros.h  nn_lens.h
Separate_headers/hyperparameters/: RL_parameters.h  gradient_parameters.h  loss_hyperparameters.h
socket_client/: NN_enums.h
tests/: kernel.cu  test_env.cpp  test_env.h
